# trello-mentoring-generator

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  run.sh
.beads/: issues.jsonl
src/trello_career_planner/: __init__.py  api_client.py  cli.py  credentials.py  edit.py  generator.py  template.py
tests/: __init__.py  test_api_client.py  test_cli.py  test_credentials.py  test_edit.py  test_generator.py  test_template.py
